# rust_ecommerce

./: .gitignore  Cargo.toml  Dockerfile  README.md  description.md  docker-build.sh  docker-compose.yml  env.production.example  env_example  revert_new_app.sh  run_tests.sh  start_new_app.sh  start_server.sh
migrations/: 20250629095635_create_users.sql  20250629131848_create_profile.sql  20250630103701_create_user_token.sql  20250701095550_create_orchestrators.sql  20250723173931_create_tenants.sql  20250729120404_create_tenant_user.sql  20250808161650_create_products.sql  20250814161912_create_carts.sql
scripts/: decode_token.sh  get_keycloak_token.sh  get_keycloak_token_real.sh  set_user_password.sh  setup_keycloak.sh  test_token.sh
src/: lib.rs  main.rs
src/app_core/: app_error.rs  app_extensions.rs  app_model.rs  app_routes.rs  app_state.rs  auth_middleware.rs  init_settings.rs  mod.rs  settings.rs
src/app_core/databases/: elasticsearch.rs  mod.rs  mongo.rs  postgres.rs  test_db.rs
src/apps/: mod.rs
src/apps/cart/: mod.rs  models.rs  repositories.rs  routes.rs  services.rs  tests.rs
src/apps/orchestrator/: models.rs  repositories.rs  routes.rs  services.rs  tests.rs
src/apps/product/: models.rs  repositories.rs  routes.rs  services.rs  tests.rs
src/apps/sync_app/: consumer.rs  producer.rs
src/apps/tenant/: mod.rs  models.rs  repositories.rs  tests.rs
src/apps/user/: mod.rs  models.rs  repositories.rs  routes.rs  (+2 more)
src/utils/: formatter.rs  jwt.rs  logging.rs  mod.rs  pagination.rs  validation.rs
tests/: README.md  test_utils.rs  user_tests.rs
(+5 files in other folders)
