[package]
name = "rust_template"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_template"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rand = "0.8"
actix-web = { version = "4", features = ["macros"] }
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono", "bigdecimal"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15" 
bcrypt = "0.15"
jsonwebtoken = "9"
futures = "0.3"
derive_more = "0.99"
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
mongodb = "2"
elasticsearch = { version = "9.0.0-alpha.1" }
anyhow = "1.0"
aws-config = "1.1"
aws-sdk-sesv2 = "1.10"
tera = "1.19"
actix = "0.13"
actix-web-actors = "4"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
once_cell = "1.19"
actix-rt = "2"
bigdecimal = { version = "0.3", features = ["serde"] }
serde_with = "3"
